k8s/mtls-k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mtls-service
spec:
  template:
    spec:
      containers:
      - name: spring-app
        image: seu-usuario/mtls-service:latest
        ports:
        - containerPort: 8443
        imagePullPolicy: Always
        volumeMounts:
          - name: certs-vol
            mountPath: /app/certs
            readOnly: true
      volumes:
        - name: certs-vol
          secret:
            secretName: mtls-certs-secret
            items:
            - key: keystore.p12
              path: keystore.p12
            - key: truststore.p12
              path: truststore.p12
---


apiVersion: v1
kind: Service
metadata:
  name: mtls-service
spec:
  selector:
    app: mtls-app
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443

---

apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mtls-service-route
  namespace: seu-namespace
spec:
  # O host deve ser o domínio do seu cluster OpenShift
  host: mtls-app.apps.seu-cluster.exemplo.com 
  to:
    kind: Service
    name: mtls-service
    weight: 100
  port:
    targetPort: 8443
  tls:
    termination: passthrough # CRUCIAL: Envia o tráfego intocado ao Pod
    insecureEdgeTerminationPolicy: Redirect
